Latest Tables Added with responsivness

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                         <div class="body-content">
                             <div class="latest-cards mb-4">
                                 <div class="row">
-                                    <div class="col-lg-6 ps-lg-0">
+                                    <div class="col-lg-6 ps-lg-0 b-lg-mb-20">
                                         <table class="latest-table">
                                             <tr class="tr">
                                                 <th class="table-heading">Latest Loan Moves</th>
