Enjoying Card added with responsivness

--- a/index.html
+++ b/index.html
@@ -418,9 +418,10 @@
                 <div class="transfer-body">
                     <div class="container">
                         <div class="body-content">
+                            <!-- Latest Cards -->
                             <div class="latest-cards mb-4">
                                 <div class="row">
-                                    <div class="col-lg-6 ps-lg-0 b-lg-mb-20">
+                                    <div class="col-lg-6 b-lg-mb-20">
                                         <table class="latest-table">
                                             <tr class="tr">
                                                 <th class="table-heading">Latest Loan Moves</th>
@@ -582,7 +583,7 @@
                                         </table>
                                     </div>
     
-                                    <div class="col-lg-6 pe-lg-0">
+                                    <div class="col-lg-6">
                                         <table class="latest-table">
                                             <tr class="tr">
                                                 <th class="table-heading">Latest Loan Moves</th>
@@ -746,6 +747,113 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Players Cards -->
+                            <div class="players-cards">
+                                <div class="row">
+                                    <div class="col-lg-6 pt-md-4 pb-4">
+                                        <div class="player-card player-card-1">
+                                            <div class="pc-tr">
+                                                <h2 class="table-heading text-light">Most Viewed Players</h2>
+                                                <div class="arrow-buttons">
+                                                    <button class="arrow-button"><i class="fa-solid fa-arrow-left"></i></button>
+                                                    <button class="arrow-button"><i class="fa-solid fa-arrow-right"></i></button>
+                                                </div>
+                                            </div>
+
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-5">
+                                                        <div class="left-img-div">
+                                                            <img src="images/player-card-1-left-img.png" alt="Player Card 1 Left img" class="left-img img-fluid">
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="col-7">
+                                                        <div class="right-part">
+                                                            <div class="right-logo-div">
+                                                                <img src="images/player-card-right-logo.png" alt="Right Logo" class="right-logo">
+                                                            </div>
+                                                            <h3 class="player-card-name">Luka Modric</h3>
+                                                            <div class="player-info">
+                                                                <span class="player-position">Central Midfield</span>
+                                                                <span class="circle"></span>
+                                                                <div class="country-img-div">
+                                                                    <img src="images/player-card-1-country-img.png" alt="Country Icon" class="country-img">
+                                                                </div>
+                                                                <span class="circle"></span>
+                                                                <span class="age">Age 34</span>
+                                                            </div>
+
+                                                            <div class="p-bottom-cards">
+                                                                <div class="p-bottom-card">
+                                                                    <span class="bold-text">$120m</span>
+                                                                    <span class="light-text">Current Value</span>
+                                                                </div>
+                                                                <div class="p-bottom-card">
+                                                                    <span class="bold-text">8. 8</span>
+                                                                    <span class="light-text">Last Match</span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-6 pt-md-4 pb-4">
+                                        <div class="player-card player-card-2">
+                                            <div class="card-body">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <div class="left-img-div">
+                                                            <img src="images/player-card-2-left-img.png" alt="Player Card 1 Left img" class="left-img img-fluid">
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="col-6 pe-sm-5">
+                                                        <div class="right-part">
+                                                            <h3 class="player-card-name">Pau Torres<br>to Barcelona</h3>
+                                                            <p class="para">Pau Torrest officially joined The Blaugrana!</p>
+
+                                                            <div class="single-card">
+                                                                <div class="right-card-img-div">
+                                                                    <img src="images/latest-rpl-1.png" alt="Right Card Image" class="right-card-img img-fluid">
+                                                                </div>
+                                                                <div class="right-card-center-part">
+                                                                    <span class="bold-text">$50m</span>
+                                                                    <span class="light-text">Transfer</span>
+                                                                </div>
+
+                                                                <div class="right-card-img-div">
+                                                                    <img src="images/latest-rpr-1.png" alt="Right Card Image 2" class="right-card-img img-fluid">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Value Cards -->
+                            
+
+                            <!-- Enjoying Card -->
+                            <div class="enjoying-card">
+                                <div class="row">
+                                    <div class="col-xl-5 col-lg-6 col-md-8 col-12">
+                                        <div class="content">
+                                            <h3 class="enjoying-heading">Enjoying Premier 11?</h3>
+                                            <p class="para">Keep updates with the latest transfer rumours, matches, and club updates by being a part of us!</p>
+                                            <a href="#" class="link">Register Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -758,6 +866,77 @@
                             <div class="top-div">
                                 <h2 class="main-heading">Matches</h2>
                                 <a href="#" class="top-link">All Matches</a>
+                            </div>
+                            <div class="bottom-div">
+                                <div class="cards">
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-1.png" alt="Section Logo 1" class="s-image">
+                                        </div>
+                                        <span class="name">Champions League</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-2.png" alt="Section Logo 2" class="s-image">
+                                        </div>
+                                        <span class="name">Europa League</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-3.png" alt="Section Logo 3" class="s-image">
+                                        </div>
+                                        <span class="name">La Liga</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-4.png" alt="Section Logo 4" class="s-image">
+                                        </div>
+                                        <span class="name">Premier League</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-5.png" alt="Section Logo 5" class="s-image">
+                                        </div>
+                                        <span class="name">Serie A</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-6.png" alt="Section Logo 6" class="s-image">
+                                        </div>
+                                        <span class="name">Bundesliga</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/s-logo-7.png" alt="Section Logo 7" class="s-image">
+                                        </div>
+                                        <span class="name">Eredivisie</span>
+                                    </div>
+
+                                    <div class="s-card">
+                                        <div class="img-div">
+                                            <img src="images/add-icon.png" alt="Add Icon" class="s-image">
+                                        </div>
+                                        <span class="name">Other</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="top-players">
+                <div class="section-head">
+                    <div class="container">
+                        <div class="content">
+                            <div class="top-div">
+                                <h2 class="main-heading">Top Players</h2>
                             </div>
                             <div class="bottom-div">
                                 <div class="cards">
