--- a/index.html
+++ b/index.html
@@ -3106,6 +3106,58 @@
                 </div>
             </div>
         </main>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-9 col-md-8 pe-lg-5 pb-md-0 pb-sm-3 pb-1">
+                        <p class="para mb-lg-5">On Premier 11 you will find the latest updates about football. Over the years Premier 11 has grown into a well-known platform. The emphasis is on giving best experience through most-updated football contents. Thank you for staying with Premier 11!</p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4 pb-md-0 pb-sm-3 pb-1">
+                        <ul class="social-ul">
+                            <li class="social-li">
+                                <a href="#" class="social-a">
+                                    <i class="fa-brands fa-facebook"></i>
+                                </a>
+                            </li>                            
+                            <li class="social-li">
+                                <a href="#" class="social-a">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>                            
+                            <li class="social-li">
+                                <a href="#" class="social-a">
+                                    <i class="fa-brands fa-tiktok"></i>
+                                </a>
+                            </li>                            
+                            <li class="social-li">
+                                <a href="#" class="social-a">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-9 col-md-8 pb-md-0 pb-sm-3 pb-1">
+                        <p class="copyright-para">&copy; 2022 Premier 11 All Rights Reserved</p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4 pb-md-0 pb-sm-3 pb-1">
+                        <ul class="f-links-ul">
+                            <li class="f-link-li">
+                                <a href="#" class="f-link">Contact</a>
+                            </li>
+
+                            <li class="f-link-li">
+                                <a href="#" class="f-link">Privacy and Cookie Policy</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <!-- JQuery CDN for Slick Carousel-->
@@ -3245,7 +3297,7 @@
                 // settings: "unslick"
                 // instead of a settings object
         ]
-        })
+        });
     </script>
 
     <!-- Custom Script -->
