Better Responsiveness in Last League Table

--- a/index.html
+++ b/index.html
@@ -3805,7 +3805,7 @@
 
                         <div class="tp-lg-cards">
                             <div class="row">
-                                <div class="col-lg-6 overflow-scroll mb-3">
+                                <div class="col-lg-6 overflow-b-sm-scroll mb-3">
                                     <div class="last-league-table latest-table">
                                         <div class="tr pc-tr">
                                             <h3 class="table-heading text-light">Last Premier League MVPs</h3>
