NavBar DropDown made Functional

--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Matches</a>
                               </li>
-                              <li class="nav-item pt-lg-2">
-                                <button><img src="images/eng-icon.png" alt="English Language Icon" class="lang-icon"> EN</button>
+                              <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="images/eng-icon.png" alt="English Language Icon" class="lang-icon"> EN
+                                </a>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" href="#"><img src="images/flag-1.png" alt="English Language Icon" class="lang-icon"> HI</a></li>
+                                  <li><a class="dropdown-item" href="#"><img src="images/flag-3.png" alt="English Language Icon" class="lang-icon"> JA</a></li>
+                                </ul>
                               </li>
                               <li class="nav-item pt-lg-2">
                                 <button class="icon-button"><i class="fa-regular fa-user"></i></button>
