Opening Search Bar on clicking search icon

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                                 <button class="icon-button"><i class="fa-regular fa-user"></i></button>
                               </li>
                               <li class="nav-item pt-lg-2">
-                                <button class="icon-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                                <form action="">
+                                    <input type="text" name="search" id="searchInput" class="collapse collapse-horizontal">
+                                    <button class="icon-button" type="button" data-bs-toggle="collapse" data-bs-target="#searchInput" aria-expanded="false" aria-controls="searchInput"><i class="fa-solid fa-magnifying-glass"></i></button>
+                                </form>
                               </li>
                         </div>
                     </nav>
