--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                               </li>
                               <li class="nav-item pt-lg-2">
                                 <form action="">
-                                    <input type="text" name="search" id="searchInput" class="collapse collapse-horizontal">
+                                    <input type="text" name="search" id="searchInput" class="collapse collapse-horizontal" placeholder="Search">
                                     <button class="icon-button" type="button" data-bs-toggle="collapse" data-bs-target="#searchInput" aria-expanded="false" aria-controls="searchInput"><i class="fa-solid fa-magnifying-glass"></i></button>
                                 </form>
                               </li>
